Added migrations for Custom Payment feature: it creates content type for advanced settings and a standard content item. If that content item already exists, it creates a new one as well, but keeping current content's settings (iban and bank transfer email).

--- a/src/Modules/Laser.Orchard.PaymentGateway/Laser.Orchard.PaymentGateway.csproj
+++ b/src/Modules/Laser.Orchard.PaymentGateway/Laser.Orchard.PaymentGateway.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Controllers\PaymentGatewayAPIController.cs" />
     <Compile Include="Controllers\PaymentInfoController.cs" />
     <Compile Include="Controllers\PosAdminBaseController.cs" />
+    <Compile Include="CustomPaymentMigrations.cs" />
     <Compile Include="Drivers\PayButtonPartDriver.cs" />
     <Compile Include="Handlers\CustomPosSiteSettingsPartHandler.cs" />
     <Compile Include="Handlers\PaymentGatewaySiteSettingsPartHandler.cs" />
