--- a/src/Modules/Laser.Orchard.AdvancedSettings/Laser.Orchard.AdvancedSettings.csproj
+++ b/src/Modules/Laser.Orchard.AdvancedSettings/Laser.Orchard.AdvancedSettings.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Services\IAdvancedSettingsService.cs" />
     <Compile Include="Services\IThemeSkinsService.cs" />
     <Compile Include="Services\ThemeSkinsService.cs" />
+    <Compile Include="Tokens\AdvancedSettingsTokens.cs" />
     <Compile Include="ViewModels\AdvancedSettingsEdit.cs" />
     <Compile Include="ViewModels\SkinsManifest.cs" />
     <Compile Include="ViewModels\ThemeSkinsPartEditViewModel.cs" />
@@ -129,6 +130,10 @@
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Themes\Orchard.Themes.csproj">
       <Project>{cde24a24-01d3-403c-84b9-37722e18dfb7}</Project>
       <Name>Orchard.Themes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Tokens\Orchard.Tokens.csproj">
+      <Project>{6F759635-13D7-4E94-BCC9-80445D63F117}</Project>
+      <Name>Orchard.Tokens</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard\Orchard.Framework.csproj">
       <Project>{2D1D92BB-4555-4CBE-8D0E-63563D6CE4C6}</Project>
