Added routing for the action

--- a/src/Modules/Laser.Orchard.TenantBridges/Laser.Orchard.TenantBridges.csproj
+++ b/src/Modules/Laser.Orchard.TenantBridges/Laser.Orchard.TenantBridges.csproj
@@ -98,6 +98,7 @@
   <ItemGroup>
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Routes\ContentBridgeRoutes.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
