--- a/src/Modules/Laser.Orchard.TenantBridges/Laser.Orchard.TenantBridges.csproj
+++ b/src/Modules/Laser.Orchard.TenantBridges/Laser.Orchard.TenantBridges.csproj
@@ -97,6 +97,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ItemController.cs" />
+    <Compile Include="Migrations\RemoteTenantContentMigrations.cs" />
+    <Compile Include="Models\RemoteTenantContentSnippetWidgetPart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routes\ContentBridgeRoutes.cs" />
   </ItemGroup>
@@ -125,7 +127,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Assets\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\" />
   </ItemGroup>
   <PropertyGroup>
