--- a/src/Modules/Laser.Orchard.TenantBridges/Laser.Orchard.TenantBridges.csproj
+++ b/src/Modules/Laser.Orchard.TenantBridges/Laser.Orchard.TenantBridges.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Models\RemoteTenantContentSnippetWidgetPart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routes\ContentBridgeRoutes.cs" />
+    <Compile Include="Security\ExecuteRemoteRecipesPermission.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\RecipeController.cs" />
