--- a/src/Modules/Laser.Orchard.TenantBridges/Laser.Orchard.TenantBridges.csproj
+++ b/src/Modules/Laser.Orchard.TenantBridges/Laser.Orchard.TenantBridges.csproj
@@ -96,11 +96,17 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="Controllers\ItemController.cs" />
+    <Compile Include="Drivers\RemoteTenantContentSnippetWidgetPartDriver.cs" />
     <Compile Include="Migrations\RemoteTenantContentMigrations.cs" />
     <Compile Include="Models\RemoteTenantContentSnippetWidgetPart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routes\ContentBridgeRoutes.cs" />
+    <Compile Include="Services\IRemoteContentService.cs" />
+    <Compile Include="Services\RemoteContentService.cs" />
+    <Compile Include="ViewModels\RemoteTenantContentSnippetWidgetPartEditorViewModel.cs" />
+    <Compile Include="ViewModels\RemoteTenantContentSnippetWidgetPartHtmlDisplayViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\RecipeController.cs" />
@@ -132,7 +138,20 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Assets\" />
-    <Folder Include="Views\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EditorTemplates\Parts\RemoteTenantContentSnippetWidget.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Placement.info">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\RemoteTenantContentSnippetWidget.Html.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\RemoteTenantContentSnippetWidget.Json.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
