--- a/src/Modules/Laser.Orchard.NwazetIntegration/compilerconfig.json
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/compilerconfig.json
@@ -2,5 +2,9 @@
   {
     "outputFile": "Styles/admin-style.css",
     "inputFile": "Assets/admin-style.scss"
+  },
+  {
+    "outputFile": "Scripts/ecommerce-tag-manager.js.min",
+    "inputFile": "Scripts/ecommerce-tag-manager.js"
   }
 ]
