--- a/src/Modules/Laser.Orchard.NwazetIntegration/packages.config
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="BuildWebCompiler" version="1.12.405" targetFramework="net48" />
+  <package id="BundlerMinifier.Core" version="3.2.449" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net48" />
@@ -9,4 +10,5 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="NUglify" version="1.5.14" targetFramework="net48" />
 </packages>
