Updated ecommerce-tag-manager.js version in resource manifest.

--- a/src/Modules/Laser.Orchard.NwazetIntegration/compilerconfig.json
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/compilerconfig.json
@@ -4,7 +4,7 @@
     "inputFile": "Assets/admin-style.scss"
   },
   {
-    "outputFile": "Scripts/ecommerce-tag-manager.js.min",
+    "outputFile": "Scripts/ecommerce-tag-manager.min.js",
     "inputFile": "Scripts/ecommerce-tag-manager.js"
   }
 ]
