Added googlemapscallback.js as a dependency for googlemapsapi with callback parameter. Added custom parameters to map part shape to get map ids inside the googlemapscallback script.

--- a/src/Modules/Laser.Orchard.Maps/Laser.Orchard.Maps.csproj
+++ b/src/Modules/Laser.Orchard.Maps/Laser.Orchard.Maps.csproj
@@ -97,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Contents\default-pin.png" />
+    <Content Include="Scripts\googlemapscallback.js" />
     <Content Include="Scripts\maps.js" />
     <Content Include="Scripts\markerclusterer.js" />
     <Content Include="Scripts\ol-geocoder.js" />
