--- a/src/Modules/Laser.Orchard.Maps/Laser.Orchard.Maps.csproj
+++ b/src/Modules/Laser.Orchard.Maps/Laser.Orchard.Maps.csproj
@@ -97,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Contents\default-pin.png" />
+    <Content Include="Scripts\googlemapsapiloader.js" />
     <Content Include="Scripts\googlemapscallback.js" />
     <Content Include="Scripts\maps.js" />
     <Content Include="Scripts\markerclusterer.js" />
