--- a/src/Modules/Laser.Orchard.NwazetIntegration/packages.config
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
-  <package id="BuildWebCompiler" version="1.12.405" targetFramework="net48" />
-  <package id="BundlerMinifier.Core" version="3.2.449" targetFramework="net48" />
+  <package id="BuildBundlerMinifier2022" version="2.9.9" targetFramework="net48" />
+  <package id="BuildWebCompiler2022" version="1.14.10" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net48" />
