--- a/src/Themes/Lasergroup/packages.config
+++ b/src/Themes/Lasergroup/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BuildBundlerMinifier" version="3.2.449" targetFramework="net48" />
+  <package id="BuildBundlerMinifier2022" version="2.9.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
