--- a/src/Modules/Laser.Orchard.StartupConfig/packages.config
+++ b/src/Modules/Laser.Orchard.StartupConfig/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net48" />
   <package id="Autofac" version="3.5.2" targetFramework="net48" />
   <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
+  <package id="BuildBundlerMinifier2022" version="2.9.9" targetFramework="net48" />
   <package id="BuildWebCompiler2022" version="1.14.10" targetFramework="net48" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
