--- a/src/Modules/Laser.Orchard.jQueryPlugins/packages.config
+++ b/src/Modules/Laser.Orchard.jQueryPlugins/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BuildBundlerMinifier2022" version="2.9.9" targetFramework="net48" />
+  <package id="BuildWebCompiler2022" version="1.14.10" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
