--- a/src/Modules/Laser.Orchard.TaskScheduler/Laser.Orchard.TaskScheduler.csproj
+++ b/src/Modules/Laser.Orchard.TaskScheduler/Laser.Orchard.TaskScheduler.csproj
@@ -102,6 +102,7 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Drivers\ScheduledTaskPartDriver.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Handlers\ScheduledTaskPartHandler.cs" />
     <Compile Include="Handlers\ScheduledTaskTasksHandler.cs" />
@@ -147,6 +148,7 @@
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
