--- a/src/Themes/KrakeDefaultTheme/KrakeDefaultTheme.csproj
+++ b/src/Themes/KrakeDefaultTheme/KrakeDefaultTheme.csproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery.min.js" />
+    <Content Include="Scripts\krake.js" />
     <Content Include="Styles\bootstrap.min.css" />
     <Content Include="Styles\fonts\font-awesome-4.6.2\css\font-awesome.css" />
     <Content Include="Styles\fonts\font-awesome-4.6.2\css\font-awesome.min.css" />
@@ -275,7 +276,7 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SimpleMenuItem.cshtml" />
+    <Content Include="Views\__SimpleMenuItem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Elements\Column.cshtml" />
@@ -321,6 +322,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Orchard.Users\Account\ChangeExpiredPassword.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\MenuItem.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
