--- a/src/Modules/Laser.Orchard.Cache/Laser.Orchard.Cache.csproj
+++ b/src/Modules/Laser.Orchard.Cache/Laser.Orchard.Cache.csproj
@@ -85,36 +85,19 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\CacheUrlAdminController.cs" />
-    <Compile Include="Filters\OutputCacheExtensionFilter.cs" />
+    <Compile Include="Drivers\MenuWidgetPartDriver.cs" />
+    <Compile Include="Handlers\NavigationCacheHandler.cs" />
     <Compile Include="Migration.cs" />
-    <Compile Include="Models\CacheUrlRecord.cs" />
-    <Compile Include="Navigation\AdminMenu.cs" />
-    <Compile Include="Permission.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Routes.cs" />
-    <Compile Include="Services\ICacheAliasServices.cs" />
-    <Compile Include="ViewModels\CacheUrlVM.cs" />
-    <Compile Include="ViewModels\SearchIndexVM.cs" />
-    <Compile Include="ViewModels\SearchVM.cs" />
+    <Compile Include="Services\INavigationCacheService.cs" />
+    <Compile Include="Services\NavigationCacheService.cs" />
     <Content Include="Placement.info" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Styles\Styles.css" />
-    <Content Include="Styles\Styles.min.css" />
     <Content Include="Web.config" />
     <Content Include="Scripts\Web.config" />
     <Content Include="Styles\Web.config" />
     <Content Include="Module.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\CacheUrlAdmin\index.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\CacheUrlAdmin\Edit.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Data\Localization\it-IT\orchard.module.po" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Core\Orchard.Core.csproj">
@@ -124,6 +107,10 @@
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.OutputCache\Orchard.OutputCache.csproj">
       <Project>{6e444ff1-a47c-4cf6-bb3f-507c8ebd776d}</Project>
       <Name>Orchard.OutputCache</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Roles\Orchard.Roles.csproj">
+      <Project>{d10ad48f-407d-4db5-a328-173ec7cb010f}</Project>
+      <Name>Orchard.Roles</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Tokens\Orchard.Tokens.csproj">
       <Project>{6f759635-13d7-4e94-bcc9-80445d63f117}</Project>
@@ -140,6 +127,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\Localization\it-IT\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Filters\" />
+    <Folder Include="Models\" />
+    <Folder Include="Navigation\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Views\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
