--- a/src/Modules/Laser.Orchard.Cache/Laser.Orchard.Cache.csproj
+++ b/src/Modules/Laser.Orchard.Cache/Laser.Orchard.Cache.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Handlers\NavigationCacheHandler.cs" />
     <Compile Include="Migration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CachedNavigationManager.cs" />
     <Compile Include="Services\INavigationCacheService.cs" />
     <Compile Include="Services\NavigationCacheService.cs" />
     <Content Include="Placement.info" />
