--- a/src/Modules/Laser.Orchard.Cache/Laser.Orchard.Cache.csproj
+++ b/src/Modules/Laser.Orchard.Cache/Laser.Orchard.Cache.csproj
@@ -85,13 +85,12 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Drivers\MenuWidgetPartDriver.cs" />
+    <Compile Include="Drivers\CacheableMenuSettingsPartDriver.cs" />
     <Compile Include="Handlers\NavigationCacheHandler.cs" />
     <Compile Include="Migration.cs" />
+    <Compile Include="Models\CacheableMenuSettingsPart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CachedNavigationManager.cs" />
-    <Compile Include="Services\INavigationCacheService.cs" />
-    <Compile Include="Services\NavigationCacheService.cs" />
     <Content Include="Placement.info" />
   </ItemGroup>
   <ItemGroup>
@@ -133,10 +132,11 @@
     <Folder Include="App_Data\Localization\it-IT\" />
     <Folder Include="Controllers\" />
     <Folder Include="Filters\" />
-    <Folder Include="Models\" />
     <Folder Include="Navigation\" />
     <Folder Include="ViewModels\" />
-    <Folder Include="Views\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EditorTemplates\Parts\CacheableMenuSettingsPart.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
