--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -163,6 +163,7 @@
     <Content Include="Scripts\datetime-editor-filter.min.js">
       <DependentUpon>datetime-editor-filter.js</DependentUpon>
     </Content>
+    <Content Include="Scripts\tabulator\luxon.js" />
     <Content Include="Styles\tinymce-enhancement.css" />
     <Content Include="Styles\tinymce-enhancement.min.css">
       <DependentUpon>tinymce-enhancement.css</DependentUpon>
