Added minified version of luxon.js.

--- a/src/Modules/Laser.Orchard.StartupConfig/bundleconfig.json
+++ b/src/Modules/Laser.Orchard.StartupConfig/bundleconfig.json
@@ -10,5 +10,11 @@
     "inputFiles": [
       "Scripts/datetime-editor-filter.js"
     ]
+  },
+  {
+    "outputFileName": "Scripts/tabulator/luxon.min.js",
+    "inputFiles": [
+      "Scripts/tabulator/luxon.js"
+    ]
   }
 ]
