--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -164,6 +164,9 @@
       <DependentUpon>datetime-editor-filter.js</DependentUpon>
     </Content>
     <Content Include="Scripts\tabulator\luxon.js" />
+    <Content Include="Scripts\tabulator\luxon.min.js">
+      <DependentUpon>luxon.js</DependentUpon>
+    </Content>
     <Content Include="Styles\tinymce-enhancement.css" />
     <Content Include="Styles\tinymce-enhancement.min.css">
       <DependentUpon>tinymce-enhancement.css</DependentUpon>
