--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -469,6 +469,8 @@
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Handlers\PartCloneAlterationHandler.cs" />
     <Compile Include="Projections\ConfigurableSortCriterionProviderForm.cs" />
+    <Compile Include="Projections\ContentTypeNamesFilter.cs" />
+    <Compile Include="Projections\ContentTypeNamesFilterForm.cs" />
     <Compile Include="Projections\DateTimeFilterForm.cs" />
     <Compile Include="RazorBase\Models\KeyNameResolveContext.cs" />
     <Compile Include="RazorBase\Models\TemplateSourceResolveContext.cs" />
