Added Leaflet styles and scripts (including markers).

--- a/src/Modules/Laser.Orchard.Maps/Laser.Orchard.Maps.csproj
+++ b/src/Modules/Laser.Orchard.Maps/Laser.Orchard.Maps.csproj
@@ -99,12 +99,16 @@
     <Content Include="Contents\default-pin.png" />
     <Content Include="Scripts\googlemapsapiloader.js" />
     <Content Include="Scripts\googlemapscallback.js" />
+    <Content Include="Scripts\leaflet.js" />
     <Content Include="Scripts\maps.js" />
     <Content Include="Scripts\markerclusterer.js" />
     <Content Include="Scripts\ol-geocoder.js" />
     <Content Include="Scripts\ol.js" />
     <Content Include="Styles\GoogleMaps.css" />
     <Content Include="Styles\images\map-pin.png" />
+    <Content Include="Styles\images\marker-icon.png" />
+    <Content Include="Styles\images\marker-shadow.png" />
+    <Content Include="Styles\leaflet.css" />
     <Content Include="Styles\ol-geocoder.css" />
     <Content Include="Styles\ol.css" />
     <Content Include="Web.config" />
