--- a/src/Modules/Laser.Orchard.Events/packages.config
+++ b/src/Modules/Laser.Orchard.Events/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
+  <package id="Ical.Net" version="4.1.11" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
+  <package id="NodaTime" version="2.0.2" targetFramework="net48" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net48" />
+  <package id="System.Reflection.TypeExtensions" version="4.1.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net48" />
 </packages>
